--- a/styles/ProjectCard.module.css
+++ b/styles/ProjectCard.module.css
@@ -11,8 +11,11 @@
 }
 
 .content {
+  height: 100%;
   padding: 1rem;
+  display: flex;
   border-radius: 0 0 20px 20px;
+  flex-direction: column;
 }
 
 .content p {
@@ -37,6 +40,7 @@
 .cta {
   display: flex;
   gap: 1rem;
+  margin-top: auto;
 }
 
 .underline {
