--- a/styles/themes.css
+++ b/styles/themes.css
@@ -3,7 +3,7 @@
   --main-bg: #24292e;
   --bg-text: rgba(56, 58, 61, 0.35);
   --text-color: #efefef;
-  --accent-color: #f9826c;
+  --accent-color: #156da0;
   --titlebar-bg: #1f2428;
   --sidebar-bg: #24292e;
   --sidebar-hover-bg: #1f2428;
